<resources>
    <string name="app_name">答案圈</string>

    <string name="seek">搜索</string>
    <string name="no_data">暂无数据</string>

    <string name="main_index">首页</string>
    <string name="main_collect">收藏</string>
    <string name="main_my">我的</string>
    <string name="register">注册</string>
    <string name="input_book_name">请输入书籍相关名称</string>
    <string name="input_book">请填写书本名称</string>
    <string name="filrate">书名搜索</string>
    <string name="subject">学科</string>
    <string name="grade">年级</string>
    <string name="part">上下册</string>
    <string name="reset">返回</string>
    <string name="confirm">确认</string>

    <string name="primary_school_qq">小学答案QQ群</string>
    <string name="middle_school_qq">中学答案QQ群</string>
    <string name="setting">设置</string>
    <string name="change_avtor">修改图像</string>
    <string name="phone">手机号</string>
    <string name="clear_cache">清除缓存</string>
    <string name="version_update">版本更新</string>
    <string name="version">版本</string>
    <string name="logout">退出登录</string>
    <string name="exit">注销账号</string>
    <string name="hot_search">热门搜索</string>
    <string name="delete">删除</string>
    <string name="search_histroty">搜索记录</string>
    <string name="share">分享</string>
    <string name="all">全部</string>
    <string name="login">登录</string>
    <string name="reset_password">找回密码</string>
    <string name="setting_follow_title">关注公众号</string>
    <string name="setting_follow_desc">已复制微信号:51答案</string>
    <string name="setting_follow_desc2">打开微信，搜索公众号关注</string>
    <string name="base_ok">确定</string>
    <string name="cancel">取消</string>
    <string name="tint">提示</string>
    <string name="warm_tint">温馨提示</string>
    <string name="tint_content">分享后即可查看完整答案！！</string>
    <string name="delete_tint">删除后就不能离线看答案了，确定吗？</string>
    <string name="wx">微信</string>
    <string name="wx_circle">朋友圈</string>
    <string name="qq">QQ</string>
    <string name="share_cancel">取消分享</string>
    <string name="is_exit">是否退出%s？</string>
    <string name="collect_cancel">取消收藏</string>
    <string name="scan_tint">扫码提示</string>
    <string name="shared">已分享</string>
    <string name="statement">免责声明</string>
    <string name="skip">跳过</string>
    <string name="upload_answer">上传答案</string>
    <string name="q">(马上得Q币)</string>
    <string name="feedback">反馈</string>
    <string name="photo_book_tint">拍照时要保证书本拍全，还要拍清楚哦！</string>
    <string name="photo_answer_tint">拍照时要保证答案文字清晰，页面完整哦！</string>
    <string name="sample_cover">示范封面</string>
    <string name="your_cover">你的封面</string>
    <string name="next">下一步</string>
    <string name="down">完成</string>
    <string name="upload_book">上传新书</string>
    <string name="book_info">书籍信息</string>
    <string name="small_school">小学</string>
    <string name="middle_school">初中</string>
    <string name="high_school">高中</string>
    <string name="forward_explain">奖励须知</string>
    <string name="share_answer_extra">%1$s %2$s%3$s</string>
    <string name="get_qq">注册登录上传新书领取Q币</string>

    <string name="login_register">登录/注册</string>
    <string name="look_detail">提现</string>
    <string name="invitation_code">填写好友的邀请码</string>
    <string name="input_invitation_code">请输入邀请码</string>
    <string name="simple_invitation_code">填写邀请码</string>
    <string name="verifycode_login">验证码登录</string>
    <string name="get_code">获取验证码</string>
    <string name="hot_answer">最新答案</string>
    <string name="hot_dissertation">最新专题</string>
    <string name="upload_book_get_coin">上传新书得Q币</string>
    <string name="market_favorable_reception">应用市场好评得Q币</string>
    <string name="share_get_coin">分享好友或者朋友圈得Q币</string>
    <string name="invite_get_coin">邀请好友免费得Q币</string>
    <string name="browser_record">浏览记录</string>
    <string name="last_browser_page">上次看到了第%1$d页</string>
    <string name="hd_resolution">高清解析</string>
    <string name="policy_title">隐私政策</string>
    <string name="recharge_record">充值记录</string>
    <string name="notification_message">消息通知</string>
    <string name="user_policy">一、介绍\n
1.1答案圈深知个人信息对您的重要性，并会尽全力保护您的个人信息安全可靠。我们致力于维持您对我们的信任，恪守以下原则，保护您的个人信息：权责一致原则、目的明确原则、选择同意原则、最少够用原则、确保安全原则、主体参与原则、公开透明原则等。同时，我们承诺，我们将按业界成熟的安全标准，采取相应的安全保护措施来保护您的个人信息。\n
1.2我们制定了本隐私政策，向您提供您需要了解的有关我们如何收集和处理信息，并概述您的责任，以帮助您保护自己使用我们的产品的安全。请注意，当我们谈论“服务”时，指的是我们的所有网站，产品和服务。\n
\n二、我们收集的信息以及如何使用它\n
2.1个人信息是指以电子或者其他方式记录的能够单独或者与其他信息结合识别特定自然人身份或者反映特定自然人活动情况的各种信息。\n
2.2为完成登录，我们可能会收集您的手机串号作为用户凭证，将在您使用本服务期间持续授权我们使用。在您注销账号时，我们将停止使用并删除上述信息。\n
2.3我们可能会使用您的联系信息与您就使用体验进行沟通，提供支持。并向您发送其他信息，如产品更新提示、官方公告、帐号安全警报等。\n
\n三、保证您的信息安全\n
3.1答案圈APP将数据存储在我们所购买的阿里云有限公司的云服务器中。其先进的安防措施包括防火墙、安全警卫系统及监控系统以尽力确保您的数据免遭自然灾害、人工入侵或其它干扰事故。\n
3.2我们实施了严格的访问控制措施，以限制只有部分员工，才有权访问或查看服务数据。而服务数据仅可用于有效的业务需求，包括但不限于提供用户服务，评估服务性能和使用情况，以及监控和改进基础设施。我们利用非公开协议、防火墙、加密保护和其他标准措施来防止未经授权访问您的信息。\n
3.3在任何情况下，我们都不会将您的数据用于任何目的。\n
3.4我们永远不会销售用户的任何信息。也不会与任何第三方共享信息。\n
\n四、软件权限说明\n
我们对于软件需要在用户使用的设备上获取的权限非常严格和克制。\n
坚决不会要求获取任何隐私权限，例如读取通讯录、获取定位、录音等。\n
\n五、关于集成第三方SDK\n
APP目前已集成友盟统计SDK。\n
\n六、第三方链接\n
当用户访问或使用APP程序及其网站时，我们可能提供到其它第三方网站的链接，软件不对这些网站的隐私准则或内容负责。软件建议您浏览张贴在这些第三方网站上的隐私条款。</string>

    <string name="privacy_statement">
尊敬的用户：\n
答案圈应用是由武汉超时代教育有限公司（以下简称“答案圈 ”）为您提供的一款智能语音服务产品。答案圈十分尊重您的个人信息和数据，并会尽全力保护您的个人信息和数据的安全可靠。本政策仅适用于答案圈应用收集和存储的用户信息和数据。\n
答案圈 App 尊重并保护所有使用服务用户的个人隐私权。为了给您提供更准确、更有个性化的服务，答案圈 App 会按照本隐私权政策的规定使用和披露您的个人信息。但答案圈 App 将以高度的勤勉、审慎义务对待这些信息。除本隐私权政策另有规定外，在未征得您事先许可的情况下，答案圈 App 不会将这些信息对外披露或向第三方提供。答案圈 App 会不时更新本隐私权政策。请在使用答案圈应用前，务必仔细阅读并了解和同意《答案圈应用的隐私政策》。 您在同意答案圈 App 服务使用协议之时，即视为您已经同意本隐私权政策全部内容。本隐私权政策属于答案圈 App 服务使用协议不可分割的一部分。\n
1. 适用范围\n
a) 在您注册答案圈 App 帐号时，您根据答案圈 App 要求提供的个人注册信息；\n
b) 在您使用答案圈 App 网络服务，或访问答案圈 App 平台网页时，答案圈 App 自动接收并记录的您的浏览器和计算机上的信息，包括但不限于您的IP地址、浏览器的类型、使用的语言、访问日期和时间、软硬件特征信息及您需求的网页记录等数据；\n
c) 答案圈 App 通过合法途径从商业伙伴处取得的用户个人数据。\n
您了解并同意，以下信息不适用本隐私权政策：\n
a) 您在使用答案圈 App 平台提供的搜索服务时输入的关键字信息；\n
b) 答案圈 App 收集到的您在答案圈 App 发布的有关信息数据，包括但不限于参与活动、成交信息及评价详情；\n
c) 违反法律规定或违反答案圈 App 规则行为及答案圈 App 已对您采取的措施。\n
2. 信息使用\n
a) 答案圈 App 不会向任何无关第三方提供、出售、出租、分享或交易您的个人信息，除非事先得到您的许可，或该第三方和答案圈 App （含答案圈 App 关联公司）单独或共同为您提供服务，且在该服务结束后，其将被禁止访问包括其以前能够访问的所有这些资料。\n
b) 答案圈 App 亦不允许任何第三方以任何手段收集、编辑、出售或者无偿传播您的个人信息。任何答案圈 App 平台用户如从事上述活动，一经发现，答案圈 App 有权立即终止与该用户的服务协议。\n
c) 为服务用户的目的，答案圈 App 可能通过使用您的个人信息，向您提供您感兴趣的信息，包括但不限于向您发出产品和服务信息，或者与答案圈 App 合作伙伴共享信息以便他们向您发送有关其产品和服务的信息（后者需要您的事先同意）。\n
3. 信息披露\n
在如下情况下，答案圈 App 将依据您的个人意愿或法律的规定全部或部分的披露您的个人信息：\n
a) 经您事先同意，向第三方披露；\n
b) 为提供您所要求的产品和服务，而必须和第三方分享您的个人信息；\n
c) 根据法律的有关规定，或者行政或司法机构的要求，向第三方或者行政、司法机构披露；\n
d) 如您出现违反中国有关法律、法规或者答案圈 App 服务协议或相关规则的情况，需要向第三方披露；\n
e) 如您是适格的知识产权投诉人并已提起投诉，应被投诉人要求，向被投诉人披露，以便双方处理可能的权利纠纷；\n
f) 在答案圈 App 平台上创建的某一交易中，如交易任何一方履行或部分履行了交易义务并提出信息披露请求的，答案圈 App 有权决定向该用户提供其交易对方的联络方式等必要信息，以促成交易的完成或纠纷的解决。\n
g) 其它答案圈 App 根据法律、法规或者网站政策认为合适的披露。\n
4. 信息存储和交换\n
答案圈 App 收集的有关您的信息和资料将保存在答案圈 App 及（或）其关联公司的服务器上，这些信息和资料可能传送至您所在国家、地区或答案圈 App 收集信息和资料所在地的境外并在境外被访问、存储和展示。\n
5. 信息安全\n
a) 答案圈 App 帐号均有安全保护功能，请妥善保管您的用户名及密码信息。答案圈 App 将通过对用户密码进行加密等安全措施确保您的信息不丢失，不被滥用和变造。尽管有前述安全措施，但同时也请您注意在信息网络上不存在“完善的安全措施”。\n
b) 在使用答案圈 App 网络服务进行网上交易时，您不可避免的要向交易对方或潜在的交易对方披露自己的个人信息，如联络方式或者邮政地址。请您妥善保护自己的个人信息，仅在必要的情形下向他人提供。如您发现自己的个人信息泄密，尤其是答案圈 App 用户名及密码发生泄露，请您立即联络答案圈 App 客服，以便答案圈 App 采取相应措施。\n

    </string>

    <string-array name="small_grade">
        <item>一年级</item>
        <item>二年级</item>
        <item>三年级</item>
        <item>四年级</item>
        <item>五年级</item>
        <item>六年级</item>
    </string-array>

    <string-array name="middle_grade">
        <item>初一</item>
        <item>初二</item>
        <item>初三</item>
    </string-array>
    <string-array name="senior_grade">
        <item>高一</item>
        <item>高二</item>
        <item>高三</item>
    </string-array>
    <string-array name="photo_item">
        <item>相册</item>
        <item>拍照</item>
    </string-array>
</resources>
