<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:orientation="vertical"
    android:paddingBottom="@dimen/t5dp"
    android:paddingLeft="@dimen/t10dp"
    android:paddingTop="@dimen/t15dp">

    <com.yc.ac.index.ui.widget.SelectGradeView
        android:id="@+id/selectSmallView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:select_margin_top="@dimen/t10dp"
        app:select_name="@string/small_school"
        app:select_name_color="@color/gray_aaa" />

    <com.yc.ac.index.ui.widget.SelectGradeView
        android:id="@+id/selectMiddleView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:select_margin_top="@dimen/t10dp"
        app:select_name="@string/middle_school"
        app:select_name_color="@color/gray_aaa" />

    <com.yc.ac.index.ui.widget.SelectGradeView
        android:id="@+id/selectHighView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:select_margin_top="@dimen/t10dp"
        app:select_name="@string/high_school"
        app:select_name_color="@color/gray_aaa" />
</LinearLayout>