<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:id="@+id/ll_bg"
    android:orientation="vertical">

    <LinearLayout
        android:layout_marginLeft="@dimen/t45dp"
        android:layout_marginRight="@dimen/t45dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/search_white_bg"
        android:orientation="vertical"
        android:padding="@dimen/distance_15">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/tint"
            android:textColor="@color/black"
            android:textSize="@dimen/text_16" />

        <TextView
            android:id="@+id/tv_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/distance_15"
            android:gravity="center"
            android:lineSpacingExtra="@dimen/distance_2"
            android:text="@string/tint_content" />

        <TextView
            android:id="@+id/tv_confirm"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="@dimen/distance_15"
            android:layout_marginRight="@dimen/distance_15"
            android:layout_marginTop="@dimen/distance_20"
            android:background="@drawable/common_cirlce_red_bg"
            android:gravity="center"
            android:text="@string/confirm"
            android:textColor="@color/white" />
    </LinearLayout>
</LinearLayout>