<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/t20dp"
    android:elevation="3dp"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/et_code"
            style="@style/LoginEditTextInputStyle"
            android:layout_weight="1"
            android:hint="请输入手机验证码"
            android:inputType="number|textMultiLine"
            android:maxLength="11" />

        <TextView
            android:id="@+id/tv_get_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/get_code"
            android:textColor="@color/gray_aaa" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/t1dp"
        android:layout_marginTop="@dimen/t10dp"
        android:background="@color/gray_dddddd" />

    <TextView
        android:id="@+id/tv_next"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="@dimen/t15dp"
        android:background="@drawable/login_btn_bg_normal"
        android:gravity="center"
        android:text="@string/next"
        android:textColor="@color/white"
        android:textSize="@dimen/t16sp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/t20dp"
        android:paddingLeft="@dimen/t20dp"
        android:paddingRight="@dimen/t20dp">

        <TextView
            android:id="@+id/tv_forget_pwd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_forget_pwd"
            android:textColor="@color/gray_999"
            android:textSize="@dimen/t12sp"
            android:visibility="gone" />

        <TextView
            android:id="@+id/tv_code_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/verifycode_login"
            android:textColor="@color/gray_999"
            android:textSize="@dimen/t12sp" />
    </RelativeLayout>
</LinearLayout>